--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "assert": "^1.4.1",
     "body-parser": "^1.17.2",
     "chai": "^4.0.2",
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "jasmine": "^2.6.0",
     "mocha": "^3.4.2",
