--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "database_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +20,7 @@
     "assert": "^1.4.1",
     "body-parser": "^1.17.2",
     "chai": "^4.0.2",
+    "chai-http": "^3.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "jasmine": "^2.6.0",
